# civ7-modding-tools

./: .copilotignore  .gitignore  CODE_QUALITY_PLAN.md  DOCUMENTATION_PLAN.md  PARITY_PLAN.md  PARITY_REPORT.md  PERFORMANCE_PLAN.md  README.md  REVIEW_PLAN.md  benchmark.py  benchmark_results.json  count_civs.py  package-lock.json  package.json  pyproject.toml  vitest.config.js
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md
dist-py-candidate/: rome-expansion.modinfo
dist-py-gondor/: mod-test.modinfo
dist-ts-reference/: mod-test.modinfo
docs/: API.md  EXAMPLES.md  GUIDE.md  INDEX.md  MIGRATION.md
example-generated-mod/: mod-test.modinfo
examples/: babylon_civilization.py  babylon_civilization.yml  babylon_civilization_generated.py  gondor_civilization.py  iceni.yml  iceni_generated.py  import_custom_icon.py  import_sql_file.py  phase2_roman_mod.py  phase3_localized_mod.py  progression_tree.py  tester-jester.yml  tester-jester_generated.py  unique_quarter.py  unit.py  unit_advanced_properties.py  unlock_builder.py  yml_to_py.py
src/builders/: __init__.py  builders.py
src/civ7_modding_tools/: __init__.py  xml_builder.py  (+1 more)
tests/: conftest.py  test_builders.py  test_builders_extended.py  test_builders_phase2.py  test_builders_phase5.py  test_civ_ability_e2e.py  test_constants_phase4.py  test_constructible_age_trait_fix.py  test_coverage_advanced.py  test_files.py  test_improvement_model_script.py  test_integration_coverage.py  test_integration_e2e.py  test_localizations.py  test_localizations_phase3.py  test_mod.py  test_nodes.py  test_nodes_phase6.py  test_phase10_modinfo_enhancements.py  test_phase1_2_import_files.py  test_phase1_3_icons.py  test_phase1_descriptive_ids.py  test_phase2_civilization_attributes.py  test_phase2_traditions.py  test_phase3_great_people.py  test_phase3_start_biases.py  test_phase4_ai_configuration.py  test_phase4_named_places.py  test_phase5_advanced_features.py  test_phase5_ai_leader_priorities.py  test_phase6_shell_configuration.py  test_phase7_unit_attributes.py  test_phase8_modifier_preview_strings.py  test_phase9_progression_tree_quotes.py  test_refactor_r123.py  test_refactor_r5.py  test_unit_abilities.py  test_unit_replacement_fix.py  test_upgrade_chain_bundling.py  test_utils.py
web/: __init__.py  app.py  run.py
(+124 files in other folders)
