[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "civ7-modding-tools"
version = "1.3.0"
description = "Python code generation library for creating Civilization 7 mods"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Phlair"}]
keywords = ["civilization7", "modding", "code-generation", "xml", "builders"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "xmltodict>=0.13.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.6",
    "openai>=1.0.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "black>=23.12.0",
]

[project.urls]
Homepage = "https://github.com/Phlair/civ7-modding-tools"
Repository = "https://github.com/Phlair/civ7-modding-tools.git"
Issues = "https://github.com/Phlair/civ7-modding-tools/issues"

[tool.uv]
# Note: python-version moved to [project] requires-python

[tool.hatch.build.targets.wheel]
packages = ["src/civ7_modding_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
check_untyped_defs = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.black]
line-length = 100
target-version = ["py312"]
